test/sema/illegal-cast.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:13: error: illegal cast from 'bool' to 'int**'
    var i = cast<int**>(false);
}
